# capstone_project_unfc

./: .env.local  .gitignore  BACKEND-SPEC.md  Deploy.md  FRONTEND-SPECS.MD  README.MD  main.py  package.json  pyproject.toml  skills-lock.json
backend/: main.py  pyproject.toml  requirements.lock.txt  requirements.txt
backend/analytics/: __init__.py  metrics.py
backend/analytics/forecasting/: __init__.py  base.py  chronos.py  chronos2.py  prophet_xgb.py  prophet_xgb_artifact.joblib  xgboost.py  xgboost_pool.joblib
backend/analytics/forecasting/crypto/: __init__.py  (+5 more)
backend/analytics/optimization/: __init__.py  portfolio.py  risk_metrics.py  simulation.py
backend/app/: chat_routes.py  forecast_routes.py  main.py
backend/core/: config.py  database.py
backend/data_engine/: coordinator.py  data_coordinator.py  fetcher.py
backend/data_engine/forecasting/: __init__.py  base_forecaster.py  lstm_model.py  prophet_model.py
backend/schemas/: analyze.py  assets.py  forecast.py  portfolio.py
backend/scripts/: eval_bnb_regime.py  eval_crypto_1day.py  seed_data.py  statistical_analysis.py  sync_crypto.py  train_crypto_assembly.py
backend/supabase/migrations/: 20260202192900_init_schema.sql  20260311000000_model_training.sql  20260311100000_storage_models_policy.sql
backend/supabase/snippets/: Untitled query 888.sql  clear_prices.sql
backend/tests/: conftest.py  test_analyze_endpoint.py  test_chat_transcribe.py  test_chronos2.py  test_forecast_endpoint.py  test_forecasting_models.py  test_portfolio.py  test_stack_xgb_stock.py  test_stock_stack_ridge_meta.py
(+158 files in other folders)
